corrected the down arrow near the English

--- a/_header.scss
+++ b/_header.scss
@@ -32,8 +32,9 @@
   .contacts .languages p img {
     position: absolute;
     height: 6px;
-    top: 28px;
-    right: 250px;
+    margin-left: 60px;
+    margin-top: 10px;
+
     cursor: pointer;
   }
 }
