--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
   .contacts .languages p img {
     position: absolute;
     height: 6px;
-    top: 28px;
-    right: 250px;
+    margin-left: 60px;
+    margin-top: 10px;
     cursor: pointer;
   }
 }
